--- a/DashboardOSX/templates/index.jade
+++ b/DashboardOSX/templates/index.jade
@@ -4,6 +4,7 @@ html
     title Dashboard - LAS Journaling
     link(href='/css/bootstrap.min.css',rel='stylesheet')
     link(href='/css/dashboard.css',rel='stylesheet')
+    link(href='/css/jquery-ui.min.css',rel='stylesheet')
   body
     .container
       header
@@ -60,3 +61,4 @@ html
   script(src='/js/dashboard.js',language='javascript')
   script(src='/js/moment.min.js',language='javascript')
   script(src='/js/bootstrap3-typeahead.min.js',language='javascript')
+  script(src='/js/jquery-ui.min.js',language='javascript')
